--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
+    "exactOptionalPropertyTypes": false,
     "forceConsistentCasingInFileNames": true,
 
     "skipLibCheck": true,
